# ddatools

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ddatools/: __init__.py  load_data.py
src/ddatools/data/: credit.csv
tests/: test_ddatools.py
